--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
         <video style="display: block;margin-left: auto;margin-right: auto;" height="50%" width="auto%" src="media/0201.mp4" controls></video>
         <p>Hopefully you said yes in your head because below is going to be a schedule of what we are going to be doing for Valentine's day!</p>
         <h1>Event 1</h1>
-        <video controls>
-            <source src="https://drive.google.com/uc?export=download&id=1XZQXaUQBJkUVNTXs0AYQt0ADhM5pxIFP" type="video/mp4">
-        </video>
+        <iframe src="https://drive.google.com/file/d/1XZQXaUQBJkUVNTXs0AYQt0ADhM5pxIFP/preview" width="640" height="360" allow="autoplay"></iframe>
     </main>
 </html>
