--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <p>Below, is something that I hope you like
              <b> (you don't have to lie if you don't because it's been so long since I've edited a video like this)</b>
         </p>
-        <video style="display: block;margin-left: auto;margin-right: auto;" height="50%" width="auto%" src="media/0201.mp4" controls></video>
-        <p>Hopefully you said yes in your head because below is going to be a schedule of what we are going to be doing for Valentine's day!</p>
-        <h1>Event 1</h1>
-        <iframe src="https://drive.google.com/file/d/1XZQXaUQBJkUVNTXs0AYQt0ADhM5pxIFP/preview" width="640" height="360" allow="autoplay"></iframe>
+        <iframe allowfullscreen controls allow="autoplay; fullscreen" frameborder="0" style="display: block;margin-left: auto;margin-right: auto;" height="50%" width="auto%" src="https://player.vimeo.com/video/1052878831"></iframe>
+       <p> Hopefully you said yes in your head because below is going to be a schedule of what we are going to be doing for Valentine's day!</p>
     </main>
 </html>
