--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>For The Love of My Life</title>
+        <title>Wedding Lite - Free Bootstrap 5 HTML Template</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,7 +71,7 @@ Free Bootstrap 5 HTML Template
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">The Wedding</a>
+                            <a class="nav-link click-scroll" href="#section_3">The Date</a>
                         </li>
 
 
@@ -96,9 +96,9 @@ Free Bootstrap 5 HTML Template
                     <div class="row h-100">
 
                         <div class="col-lg-6 col-12 my-auto">
-                            <h2 style="color: rgb(255, 9, 165);"><b>👋 Hey! Will You Be My Valentine?</b></h2>
+                            <h2 style="color: rgb(255, 9, 165);"><b>👋 Hey! Will You Honor Me With Your Time & Let Me To Be Your Valentine?</b></h2>
 
-                            <h1 class="text-white hero-title mb-4">(You're Being My Valentine)</h1>
+                            <h3 class="text-white hero-title mb-4">(I'm Being Your Valentine)</h3>
 
                             <p class="text-white mb-2">
                                 <i class="bi-check-circle-fill custom-icon me-1"></i>
@@ -158,7 +158,7 @@ Free Bootstrap 5 HTML Template
                                     <span class="about-tag ms-2"></span>
                                 </div>
 
-                                <p>Chadege, you are the sweetest most wonderful girl I know. You are the reason I try so hard at everything, I want to amaze you and only you because I want to know that I'm able to get the attention of the most amazing girl in the world!</p>
+                                <p>Chadege, She is just the sweetest most wonderful girl I know. She are the reason I try so hard at everything, I want to amaze her and only her because I want to know that I'm able to get the attention of the most amazing girl in the world!</p>
 
                               
                             
@@ -196,7 +196,7 @@ Free Bootstrap 5 HTML Template
 
                         <div class="col-lg-12 col-12">
                             <div class="section-title-wrap mb-5">
-                                <h2 class="section-title">The Wedding</h2>
+                                <h2 class="section-title">The Date</h2>
 
                                 <div class="section-title-bottom">
                                     <span class="section-title-line"></span>
@@ -208,53 +208,45 @@ Free Bootstrap 5 HTML Template
 
                         <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                             <div class="image-hover-thumb">
-                                <img src="images/decorated-table-setting-wedding-celebration.jpg" class="img-fluid" alt="">
+                                <img style="height: 500px;width: auto;" src="images/heart.avif" class="img-fluid" alt="">
                             </div>
 
                             <div class="section-block">
-                                <h3 class="my-3">The Reception</h3>
-
-                                <p class="mb-2">
-                                    <i class="bi-geo-alt me-1"></i>
-                                    5th Avenue at, Central Park S
-                                </p>
+                                <h3 class="my-3">The Pizza</h3>
 
                                 <p>
-                                    <i class="bi-clock me-1"></i>
-                                    5:00 PM
+                                    <i class="bi-heart-fill me-1"></i>
+                                    We are going back to one of the first things we've made together. Since then, we've both grown and learned many lessons and become better and I'm not just talking about our pizza making abilities. (even though you still loved the soupy one we made!)
                                 </p>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-12 d-flex flex-column mb-4 mb-lg-0 mb-md-0">
                             <div class="image-hover-thumb">
-                                <img src="images/front-view-wedding-couple.jpg" class="img-fluid" alt="">
+                                <img style="height: 500px;" src="images/movies.avif" class="img-fluid" alt="">
                             </div>
 
                             <div class="section-block">
-                                <h3 class="my-3">Wedding Ceremony</h3>
-
-                                <p class="mb-2">
-                                    <i class="bi-geo-alt me-1"></i>
-                                    5th Avenue at, Central Park S
-                                </p>
+                                <h3 class="my-3">The Movie</h3>
 
                                 <p>
-                                    <i class="bi-clock me-1"></i>
-                                    6:30 PM to 9:30 PM
+                                    <i class="bi-heart-fill me-1"></i>
+                                    How can you pass Valentine's Day without watching a romance movie! Obviously if there is anything you have in mind then let me know, but if you want suggestions I have some. (I hate the notebook because it glorified cheating 🤮)
                                 </p>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-12 d-flex flex-column">
-                            <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8046.475092226252!2d-73.9752829999323!3d40.766655075110314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f07d5da561%3A0x61f6aa300ba8339d!2sThe%20Plaza!5e1!3m2!1sen!2ssg!4v1662129560604!5m2!1sen!2ssg" width="100%" height="310" allowfullscreen="" loading="lazy"></iframe>
+                            <div class="image-hover-thumb">
+                                <img style="height: 500px;" src="images/love.jpg" class="img-fluid" alt="">
+                            </div>
 
                             <div class="section-block">
-                                <h3 class="my-3">Location</h3>
+                                <h3 class="my-3">Painting/Drawing</h3>
 
                                 <p class="mb-2">
-                                    <i class="bi-geo-alt me-1"></i>
-                                    5th Avenue at, Central Park S, New York, NY 10019, United States
+                                    <i class="bi-heart-fill me-1"></i>
+                                  We have been talking about painting again for a long time but now is the time to actually do it! I love seeing your creative side shine whenever we do something like this so this is more for me so that I can have the privelage to be in awe of you.
                                 </p>
                             </div>
                         </div>
@@ -283,8 +275,8 @@ Free Bootstrap 5 HTML Template
 
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
-                                <a href="images/gallery/bearded-stylish-groom-suit-beautiful-blonde.jpg" class="popup-image">
-                                    <img src="images/gallery/bearded-stylish-groom-suit-beautiful-blonde.jpg" class="gallery-image img-fluid" alt="">
+                                <a class="popup-image">
+                                    <img style="height: 750px; width: fit-content;" src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -292,13 +284,13 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/couple.jpg" class="popup-image">
-                                    <img src="images/gallery/couple.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/groom-with-bride-are-knocking-glasses-with-champagne.jpg" class="popup-image">
-                                    <img src="images/gallery/groom-with-bride-are-knocking-glasses-with-champagne.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -306,7 +298,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="images/gallery/bearded-stylish-groom-suit-beautiful-blonde.jpg" class="popup-image">
-                                    <img src="images/gallery/bearded-stylish-groom-suit-beautiful-blonde.jpg" class="gallery-image img-fluid" alt="">
+                                    <img style="height: 750px;" src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -314,13 +306,13 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/bride-groom-having-their-wedding-with-guests-beach.jpg" class="popup-image">
-                                    <img src="images/gallery/bride-groom-having-their-wedding-with-guests-beach.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/wedding-ceremony-place-nature-outside-summer.jpg" class="popup-image">
-                                    <img src="images/gallery/wedding-ceremony-place-nature-outside-summer.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -328,7 +320,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12">
                             <div class="gallery-thumb image-hover-thumb">
                                 <a href="images/gallery/elegant-young-woman-fashionable.jpg" class="popup-image">
-                                    <img src="images/gallery/elegant-young-woman-fashionable.jpg" class="gallery-image img-fluid" alt="">
+                                    <img style="height: 600px;" src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -336,13 +328,13 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12 d-flex flex-column">
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/young-couple-broke-down-car-while-traveling.jpg" class="popup-image">
-                                    <img src="images/gallery/young-couple-broke-down-car-while-traveling.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
 
                             <div class="gallery-thumb gallery-thumb-small image-hover-thumb">
                                 <a href="images/gallery/young-couple-traveling-car-sunny-day.jpg" class="popup-image">
-                                    <img src="images/gallery/young-couple-traveling-car-sunny-day.jpg" class="gallery-image img-fluid" alt="">
+                                    <img src="images/question.jpg" class="gallery-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
