--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Free Bootstrap 5 HTML Template
                     <div class="row h-100">
 
                         <div class="col-lg-6 col-12 my-auto">
-                            <h2 style="color: rgb(255, 9, 165);"><b>👋 Hey! Will You Honor Me With Your Time & Let Me To Be Your Valentine?</b></h2>
+                            <h2 style="color: rgb(255, 9, 165);"><b>👋 Hey Beautiful! Will You Honor Me With Your Time & Let Me To Be Your Valentine?</b></h2>
 
                             <h3 class="text-white hero-title mb-4">(I'm Being Your Valentine)</h3>
 
